--- a/WebApplication1/WebApplication1/StyleSheet.css
+++ b/WebApplication1/WebApplication1/StyleSheet.css
@@ -38,3 +38,72 @@ main, aside {
     padding: 3px 8px;
     color: #555;
 }
+main label{
+    line-height: 25px;
+    width: 100px;
+    margin: 5px 10px 2px 10px;
+    text-align: right;
+}
+main input{
+    margin: 0px 0px 5px 0px;
+    width: 200px;
+}
+main select{
+    height: 25px;
+    width: 200px;
+}
+main table{
+    display: inline-block;
+    width: 200px;
+}
+main .btn{
+    margin: 5px 10px 5px 10px;
+    display: block;
+}
+main h1{
+    margin-left: 10px;
+}
+aside label{
+    line-height: 25px;
+    width: 100%;
+    margin: 5px 0px;
+}
+aside input{
+    margin: 5px 0px;
+    width: 100%;
+}
+aside .btn{
+    margin: 5px 0px;
+    width: 100%;
+}
+aside select{
+    width: 100%;
+}
+/*SMALL SCREEN RESOLUTION CODE*/
+@media only screen and (max-width: 1200px) {
+    main label{
+        width: 50%;
+    }
+}
+/*MOBILE SCREEN RESOLUTION CODE*/
+@media only screen and (max-width: 1000px) {
+    .col-xs-4, .col-xs-8{
+        width: 100%;
+        margin-top: 20px;
+    }
+    main label{
+        width: 100%;
+        text-align: left;
+        margin: 2px 0 2px 0;
+    }
+    main input{
+        width:100%;
+        margin: 5px 0 2px 0;
+    }
+    main select{
+        width: 100%;
+    }
+    main .btn{
+        margin: 5px 0 2px 0;
+    }
+}
