--- a/WebApplication1/WebApplication1/resource/style/theme.css
+++ b/WebApplication1/WebApplication1/resource/style/theme.css
@@ -47,7 +47,7 @@ main, aside {
 article div.category, article div.file {
     text-align: center;
 }
-
+/*Opmaak Myron*/
 main:not(#media) label{
     line-height: 25px;
     width: 100px;
@@ -92,29 +92,29 @@ aside select {
 /*SMALL SCREEN RESOLUTION CODE*/
 @media only screen and (max-width: 1200px) {
     main label{
-        width: 50%;
+        width: 50%!IMPORTANT;
     }
 }
 /*MOBILE SCREEN RESOLUTION CODE*/
 @media only screen and (max-width: 1000px) {
     .col-xs-4, .col-xs-8{
-        width: 100%;
-        margin-top: 20px;
+        width: 100%!IMPORTANT;
+        margin-top: 20px!IMPORTANT;
     }
     main label{
-        width: 100%;
-        text-align: left;
-        margin: 2px 0 2px 0;
+        width: 100%!IMPORTANT;
+        text-align: left!IMPORTANT;
+        margin: 2px 0 2px 0!IMPORTANT;
     }
     main input{
-        width:100%;
-        margin: 5px 0 2px 0;
+        width:100%!IMPORTANT;
+        margin: 5px 0 2px 0!IMPORTANT;
     }
     main select{
-        width: 100%;
+        width: 100%!IMPORTANT;
     }
     main .btn{
-        margin: 5px 0 2px 0;
+        margin: 5px 0 2px 0!IMPORTANT;
     }
 }
 
