--- a/WebApplication1/WebApplication1/resource/style/theme.css
+++ b/WebApplication1/WebApplication1/resource/style/theme.css
@@ -62,6 +62,7 @@ main:not(#media) label{
     width: 100px;
     margin: 5px 10px 2px 10px;
     text-align: right;
+    vertical-align: top;
 }
 main:not(#media) input {
     margin: 0px 0px 5px 0px;
